# GEAK

./: .dockerignore  .gitignore  .readthedocs.yaml  ADAPTIVE_MIXED_MODE.md  CONTRIBUTING.md  Dockerfile  HIP_Shared_Memory_Optimization_Best_Practices.md  Makefile  OPTIMIZATION_SUMMARY.md  README.md  README_zh.md  SECURITY.md  batch_test.sh  batch_test_hip.sh  entrypoint.sh  hip_shared_memory_best_practices.md  mkdocs.yml  pyproject.toml  test_harness.py
mcp_tools/automated-test-discovery/: pyproject.toml
mcp_tools/automated-test-discovery/src/automated_test_discovery/: server.py
mcp_tools/cross-session-memory-mcp/: pyproject.toml
mcp_tools/cross-session-memory-mcp/src/cross_session_memory_mcp/: server.py
mcp_tools/memory-mcp/: pyproject.toml
mcp_tools/memory-mcp/src/memory_mcp/: server.py
mcp_tools/metrix-mcp/: README.md  pyproject.toml
mcp_tools/metrix-mcp/src/metrix_mcp/: __init__.py  core.py  server.py
mcp_tools/profiler-mcp/: pyproject.toml
mcp_tools/profiler-mcp/examples/: profile_kernel.py
mcp_tools/profiler-mcp/src/profiler_mcp/: __init__.py  core.py  server.py
mcp_tools/profiler-mcp/tests/: conftest.py  test_profiler_integration.py  test_profiler_unit.py
mcp_tools/rag-mcp/: README.md  pyproject.toml  run_mcp_server.sh
mcp_tools/rag-mcp/knowledge-base/: INDEX.md  README.md
mcp_tools/rag-mcp/knowledge-base/amd-knowledge-base/best-practices/ci-cd/: github-actions.md
mcp_tools/rag-mcp/knowledge-base/amd-knowledge-base/best-practices/performance/: memory-optimization.md
mcp_tools/rag-mcp/knowledge-base/amd-knowledge-base/best-practices/testing/: gpu-testing.md
mcp_tools/rag-mcp/knowledge-base/amd-knowledge-base/layer-1-hardware/amd-gpu-arch/: cdna-architecture.md  rdna-architecture.md
mcp_tools/rag-mcp/knowledge-base/amd-knowledge-base/layer-2-compute-stack/hip/: cuda-to-hip-porting.md  hip-memory-management.md
mcp_tools/rag-mcp/knowledge-base/amd-knowledge-base/layer-2-compute-stack/rocm/: rocm-docker-images.md  rocm-repositories.md
mcp_tools/rag-mcp/knowledge-base/amd-knowledge-base/layer-2-compute-stack/rocm-systems/: amd-smi-usage.md  rocm-systems-usage.md
mcp_tools/rag-mcp/knowledge-base/amd-knowledge-base/layer-2-compute-stack/therock/: therock-overview.md
mcp_tools/rag-mcp/knowledge-base/amd-knowledge-base/layer-3-libraries/algorithms/: hip-performance-optimization.md  rocthrust-usage.md
mcp_tools/rag-mcp/knowledge-base/amd-knowledge-base/layer-3-libraries/blas/: hipblas-usage.md
mcp_tools/rag-mcp/knowledge-base/comparisons/: rocm-vs-cuda.md
mcp_tools/rag-mcp/src/rag_mcp/: __init__.py  retrieval.py  server.py
mcp_tools/rag-mcp/src/rag_mcp/config/: rag_config.yaml
mcp_tools/rag-mcp/tests/: test_e2e.py  test_manual.py  test_rag_mcp.py
(+854 files in other folders)
