[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cross-session-memory-mcp"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["fastmcp>=0.2.0"]

[project.scripts]
cross-session-memory-mcp = "cross_session_memory_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
