[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "memory-mcp"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["fastmcp>=0.2.0"]

[project.scripts]
memory-mcp = "memory_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
