[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "profiler-mcp"
version = "0.1.0"
description = "Unified GPU kernel profiling MCP server (rocprof-compute + Metrix)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.2.0",
]

[project.scripts]
profiler-mcp = "profiler_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
